// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpIdUnique return errors on different path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path2",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
]
`;

exports[`oasOpIdUnique return errors on same path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "post",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
]
`;
